# RAG_Langchain_Ollama

./: .gitignore  README.md  main.py  pyproject.toml
