[project]
name = "rag-langchain-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "langchain-text-splitters>=0.3.11",
    "pypdf>=6.1.0",
]
